Name:                   mongo-db-query-builder
Version:                0.0.0
Author:                 Fujimura Daisuke <me@fujimuradaisuke.com>
Maintainer:             Fujimura Daisuke <me@fujimuradaisuke.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      MongoDB.QueryBuilder
  Other-Modules:        MongoDB.QueryBuilder.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , mongodb-query-builder
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
